docs: add deep-teaching README (root + modules) and MIT LICENSE